objects/OpptyOwnerDefaultAssignment__c.object
<CustomObject>
    <description>Opportunity Owner Default Assignment per Country</description>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpptyOwnerDefaultAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>OpptyOwnerDefaultAssignments</relationshipLabel>
        <relationshipName>OpptyOwnerDefaultAssignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_UniqueKey__c</fullName>
        <description>This fields holds the unicity key for each record to avoid duplicates (&lt;Context&gt;~&lt;CountryCode&gt;~&lt;BusinessUnit&gt;).</description>
        <inlineHelpText>This fields holds the unicity key for each record to avoid duplicates (&lt;Context&gt;~&lt;CountryCode&gt;~&lt;BusinessUnit&gt;).</inlineHelpText>
        <label>TECH_UniqueKey</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tech_Country_BusinessUnit__c</fullName>
        <formula>Country__r.CountryCode__c &amp; &quot;_&quot; &amp;TEXT(BusinessUnit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Country BusinessUnit</label>
        <type>Text</type>
    </fields>
    <label>OpptyOwnerDefaultAssignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>Assignee__c</columns>
        <columns>Context__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Owner Default Assignment Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpptyOwnerDefaultAssignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>